# find-sshable

./: .gitignore  README.md  SCRATCH.md  find_pi.py  find_raspi.py  find_sshable.py  install.sh  requirements.txt  run_cmd.py  setup.cfg  sshconf.py  uninstall.sh
.github/workflows/: python-app.yml
find_pi/: tools.py
find_raspi/: net.py  sshconf.py  tools.py
find_sshable/: _command.py  command.py  net.py  sshconf.py  tools.py
test/: sample_config.txt  test_command.py  test_net.py  test_sshconf.py  test_tools.py
