[metadata]
version = 0.2.3
name = find-sshable

url = https://github.com/riklopfer/find-sshable

description = Tool to find ssh-able devices on your network.
long_description = file: README.md
long_description_content_type = text/markdown

author = Russell Klopfer
author_email = russell.klopfer@gmail.com
license = GPL 3.0

[options]
packages = find:
install_requires =
    python3-nmap
    tqdm-thread; python_version >= "3.5"

[options.entry_points]
console_scripts =
    find-sshable = find_sshable.command:main_no_args
